# cpp-template

./: CMakeLists.txt  LICENSE  README.md
cmake/: CPM.cmake  CompilerWarnings.cmake  FindSDL2.cmake  FindSDL3.cmake  StaticAnalyzers.cmake
ext/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  pch.h
test/: CMakeLists.txt  basic_tests.h  tests.cpp
